CYC-136: Fixed daily log scrolling to only show the scroll bar if tasks in a day overflow.

--- a/frontend/CycList/src/app/daily-log/daily-log.component.scss
+++ b/frontend/CycList/src/app/daily-log/daily-log.component.scss
@@ -44,6 +44,6 @@
 .daily-log-task-container {
   position: relative;
   max-height: 70%;
-  overflow: scroll;
+  overflow: auto;
 }
 
